# Nodal-Knot

./: example.ipynb  pyproject.toml
src/nodal_knot/: NodalKnot.py  __init__.py  utils.py
