[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodal_knot"
dynamic = ["version"]
description = "non-Hermitian nodal knot."
authors = [
    {name = "Hakan Akgün", email = "hakanakgun317@gmail.com"},
    {name = "Xianquan (Sarinstein) Yan", email = "xianquanyan@gmail.com"},
]
maintainers  = [
    {name = "Xianquan (Sarinstein) Yan", email = "xianquanyan@gmail.com"},
    {name = "Hakan Akgün", email = "hakanakgun317@gmail.com"},
]
keywords = [
    "non-hermitian nodal knot",
    "morphological image processing"
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
# dependencies = [
#     "numpy",
#     "networkx",
#     "scikit-image",
#     "poly2graph"
# ]

[project.urls]
Homepage = "https://github.com/sarinstein-yan/Nodal-Knot"
Repository = "https://github.com/sarinstein-yan/Nodal-Knot"

[tool.hatch.version]
path = "src/nodal_knot/__init__.py"

# [tool.hatch.build.targets.sdist]
# exclude = ["assets"]

# [tool.hatch.build.targets.wheel]
# packages = ["src/nodal_knot"]